# mdelibs

./: CMakeLists.txt  README.md
audio/: CMakeLists.txt  drv_alsa.c  drv_ao.c
audio/pthread/: body.c  decl.c
audio/thread/: body.c  decl.c
core/: CMakeLists.txt  aboutdialog.c  directory.c  file.c  icon.c  mutex.c  string.c  thread.c  users.c
include/MDE/: CommandLine.h  Directory.h  File.h  Foundation.h  MachDep.h  String.h  Users.h
include/MDE/Audio/: Audio.h
include/MDE/Core/: AboutDialog.h  Directory.h  File.h  Icon.h  Mutex.h  String.h  Thread.h  Users.h
include/MDE/Sound/: ID3.h  Sound.h
sound/: CMakeLists.txt  drv_flac.c  drv_mp3.c  drv_vorbis.c  id3.c  mp3.c  sound.c
src/: commandline.c  directory.c  file.c  string.c  users.c
src/audio/driver/: alsa.c
src/core/: string.c  users.c
